# advent-of-code

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md  advent-code.sln  advent-code.sln.DotSettings  vcpkg.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-cpp.yml  build-csharp.yml  build-rust.yml  build.yml  lock.yml
src/: Directory.Build.props
src/2021-cpp/: CMakeLists.txt
src/2021-cpp/day1/: CMakeLists.txt  day1.cc
src/2021-csharp/: Base2021AdventOfCodeDay.cs  advent-code-2021.csproj
src/2021-csharp/day1/: Day1.cs
src/2021-csharp/day2/: Day2.cs
src/2021-csharp/day3/: Day3.cs  Input.cs
src/2021-csharp/day4/: BingoCard.cs  Day4.cs
src/2021-csharp/day5/: Day5.cs
src/2021-csharp/day6/: Day6.cs
src/2021-rust/day1/: build.rs
src/2021/day2/: build.rs
src/2022-cpp/: CMakeLists.txt
src/2022-cpp/day1/: CMakeLists.txt  day1.cc  day1.h  day1Tests.cc  main.cc
src/2022-cpp/day10/: CMakeLists.txt  day10.cc  day10.h  day10Tests.cc  main.cc
src/2022-cpp/day11/: CMakeLists.txt  day11.cc  day11.h  day11Tests.cc  main.cc
src/2022-cpp/day12/: CMakeLists.txt  day12.cc  day12.h  day12Tests.cc  main.cc
src/2022-cpp/day13/: CMakeLists.txt  day13.cc  day13.h  day13Tests.cc  main.cc
src/2022-cpp/day2/: CMakeLists.txt  day2.cc  day2.h  day2Tests.cc  main.cc
src/2022-cpp/day3/: CMakeLists.txt  day3.cc  day3.h  day3Tests.cc  main.cc
src/2022-cpp/day4/: CMakeLists.txt  day4.cc  day4.h  day4Tests.cc  main.cc
src/2022-cpp/day5/: CMakeLists.txt  day5.cc  day5.h  day5Tests.cc  main.cc
src/2022-cpp/day6/: CMakeLists.txt  day6.cc  day6.h  day6Tests.cc  main.cc
src/2022-cpp/day7/: CMakeLists.txt  day7.cc  day7.h  day7Tests.cc  main.cc
src/2022-cpp/day8/: CMakeLists.txt  day8.cc  day8.h  day8Tests.cc  main.cc
src/2022-cpp/day9/: CMakeLists.txt  day9.cc  day9.h  day9Tests.cc  main.cc
src/2022-csharp/: Base2022.cs  Base2022AdventOfCodeDay.cs  Constants.cs  I2022Marker.cs  advent-code-2022.csproj
src/2022-csharp/Properties/: Resources.Designer.cs
src/2022-csharp/day1/: Day1.cs
src/2022-csharp/day10/: Add.cs  Day10.cs  NoOp.cs
src/2022-csharp/day11/: Day11.cs  Evaluator.cs  Monkey.cs  NewCalculator.cs  PrintableMonkey.cs
src/2022-csharp/day12/: Day12.cs  Graph.cs  Node.cs  Point.cs
src/2022-csharp/day13/: Day13.cs  IPacket.cs  ListPacket.cs  PacketChecker.cs  PacketComparer.cs  ValuePacket.cs
src/2022-csharp/day14/: Day14.cs  RockFormation.cs
src/2022-csharp/day15/: Day15.cs  Sensor.cs
src/2022-csharp/day16/: Day16.cs
src/2022-csharp/day2/: Day2.cs  Game.cs
src/2022-csharp/day3/: Day3.cs
src/2022-csharp/day4/: Day4.cs
src/2022-csharp/day5/: Day5.cs
src/2022-csharp/day6/: Day6.cs  Results.cs
src/2022-csharp/day7/: Day7.cs  FileInfo.cs  IContainingItem.cs
src/2022-csharp/day8/: Day8.cs  Direction.cs  EdgeNode.cs  Graph.cs  TreeScore.cs
src/2022-csharp/day9/: Day9.cs  Input.cs  Point.cs
src/2022-rust/day1/src/: main.rs
src/2022-rust/day2/src/: main.rs
src/2022-rust/day3/src/: main.rs
src/2022-rust/day4/: Cargo.toml  build.rs
src/2022-rust/day4/src/: main.rs
src/2022-rust/day5/: Cargo.toml  build.rs
src/2022-rust/day5/src/: main.rs
src/2022-rust/day8/: Cargo.toml
src/2023-csharp/: advent-code-2023.csproj
src/2023-csharp/day1/: Day12023.cs
src/2023-csharp/day2/: Cube.cs  Day22023.cs  Round.cs
src/2023-csharp/day3/: Day22023.cs  measurements.txt  sample.txt
src/2023-csharp/day4/: Card.cs  Day42023.cs
src/2023-csharp/day5/: Almanac.cs  Day52023.cs  Mapping.cs
src/2023-csharp/day6/: Day62023.cs
src/2023-csharp/day7/: CardNumber.cs  Day72023.cs  Hand.cs  HandComparer.cs  HandScore.cs
src/2023-csharp/day8/: Day82023.cs  Leaf.cs
src/2023-csharp/day9/: Day92023.cs  Readings.cs
src/2024-cpp/day1/: day1.h  day1Tests.cc  test2.txt
src/2024-cpp/day2/: CMakeLists.txt  day2.cc  day2.h  day2Tests.cc  main.cc
src/2024-csharp/: advent-code-2024.csproj
src/common-csharp/: BaseAdventOfCodeDay.cs  Constants.cs  IAdventOfCodeDay.cs  Line.cs  Parts.cs  Point.cs  common.csproj
src/cpp/: CMakeLists.txt  CMakePresets.json
src/cpp/src/2024-cpp/day1/: CMakeLists.txt  day1.cc  day1.h  day1Tests.cc  main.cc
src/csharp/: advent-code.sln  advent-code.sln.DotSettings  advent-code.slnx
src/csharp/src/: Directory.Build.props
src/csharp/tests/: Directory.Build.props
src/rust/: Cargo.toml
src/rust-2023/src/: day1.rs
src/startup-csharp/: Program.cs  startup.csproj
tests/: Directory.Build.props
tests/advent-code-2021Tests/: Constants.cs  Dockerfile  advent-code-2021Tests.csproj
tests/advent-code-2021Tests/day4/: Day4Tests.cs
tests/advent-code-2021Tests/day5/: Day5Tests.cs
tests/advent-code-2022Tests/: Constants.cs  Dockerfile  advent-code-2022Tests.csproj
tests/advent-code-2022Tests/day1/: Day1Tests.cs
tests/advent-code-2022Tests/day10/: Day10Tests.cs
tests/advent-code-2022Tests/day11/: Day11Tests.cs
tests/advent-code-2022Tests/day12/: Day12Tests.cs
tests/advent-code-2022Tests/day13/: Day13Tests.cs
tests/advent-code-2022Tests/day14/: Day14Tests.cs
tests/advent-code-2022Tests/day15/: Day15Tests.cs
tests/advent-code-2022Tests/day16/: Day16Tests.cs
tests/advent-code-2022Tests/day2/: Day2Tests.cs
tests/advent-code-2022Tests/day3/: Day3Tests.cs
tests/advent-code-2022Tests/day4/: Day4Tests.cs
tests/advent-code-2022Tests/day5/: Day5Tests.cs
tests/advent-code-2022Tests/day6/: Day6Tests.cs
tests/advent-code-2022Tests/day7/: Day7Tests.cs
tests/advent-code-2022Tests/day8/: Day8Tests.cs
tests/advent-code-2022Tests/day9/: Day9Tests.cs
tests/advent-code-2023Tests/: Constants.cs  advent-code-2023Tests.csproj
tests/advent-code-2023Tests/day1/: Day12023Tests.cs
tests/advent-code-2023Tests/day7/: CardNumberExtensionsTests.cs  Day62023Tests.cs  HandScoreTestData.cs
tests/advent-code-2023Tests/day9/: Day92023Tests.cs
tests/advent-code-2024Tests/: Constants.cs
tests/advent-code-2024Tests/day1/: Day1Tests.cs
tests/commonTests/: LineTests.cs  PointTests.cs  commonTests.csproj
(+265 files in other folders)
